--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 body{
+    margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 h1{
-    font: 50px;
+    font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
 }
 .name-highlight{
     color: orange;
@@ -15,4 +22,25 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-repeat:no-repeat;
+    background-image: url("images/top-banner.png");
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient( 45deg, lightSalmon, tomato);
+    background-color: orange;
+    padding: 10px 30px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+    background-repeat:no-repeat;
+    background-image: url("images/dream-bg.png");
+    background-position: right;
 }
