--- a/style.css
+++ b/style.css
@@ -44,3 +44,30 @@ section{
     background-image: url("images/dream-bg.png");
     background-position: right;
 }
+.single-experience{
+    box-shadow:10px 10px 40px dimgray;
+    border-radius: 5px;
+    height: 80%;
+    background-color: gainsboro;
+}
+.experince-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#font-end{
+    border-left: 5px solid;
+    border-image: linear-gradient(180deg,lightSalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 10px solid;
+    border-image: linear-gradient(180deg, blue, rgb(3, 41, 17)5, 40, 21));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 10px;
+    color: gainsboro;
+
+}
