--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ section{
 }
 footer p{
     text-align: center;
-    font-size: 10px;
-    color: gainsboro;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
 
 }
